# er-spell-keybinds

./: .gitignore  Cargo.toml  build.bat  build.ps1  eldenring_remapper.ini  spell_keybinds.ini
.cargo/: config.toml
src/: lib.rs  mapper.rs  simple_logger.rs
util/: DebugGame-WinDbgPreview.ps1  RunGame.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
