[package]
name = "sorceries-incantations-keybinds"
version = "0.1.0"
edition = "2024"

[dependencies]
fromsoftware-shared = { git = "https://github.com/vswarte/fromsoftware-rs.git" }
eldenring = { git = "https://github.com/vswarte/fromsoftware-rs.git" }
pelite = "0.10.0"
keyboard-codes = "0.3.0"
windows = { version = "0.62.2", features = ["Win32_System_LibraryLoader", "Win32_Foundation"] }
ini = "1.3.0"
device_query = "4.0.1"

[lib]
crate-type = ["cdylib"]
